feature: introduce conditional requests with `@SpeedyETag` and ETag validation
- Added support for HTTP conditional requests (ETag handling) using `@SpeedyETag` annotations.
- Implemented `EtagStrategy` with `RANDOM` and `TIMESTAMP` options for configurable token generation.
- Enhanced entity metadata and validation layers to handle ETag definitions and their respective strategies.
- Introduced new exceptions (`PreconditionFailedException`) and response types (`SpeedyNotModifiedResponse`) to support 412 and 304 responses.
- Updated `QueryProcessor` to enable ETag-based validations for preconditions and caching mechanisms.
- Refactored request handlers to extract conditional logic for ETag evaluation.
- Added tests, utilities (`EtagUtil`, `EtagManager`), and documentation for conditional requests.